# rustedPunk

./: .gitignore  AI-README.md  Cargo.toml  OPEN-QUESTIONS.md  PROJECT-STRUCTURE.md
data/: advantages.toml  lifepath_classic.toml  lifepath_desaster.toml
docs/rules/: Alterspunkte.wiki  Punktevergabe_Alternativen.wiki  Regeln.wiki  Technlogien.wiki  VorUndNachteile.wiki  charaktererschaffung.wiki  hausregeln.wiki  wiki-update-drafts.md
src/: advantages.rs  armor.rs  character.rs  chargen.rs  dice.rs  health.rs  inventory.rs  lib.rs  main.rs  melee.rs  weapons.rs
tools/: fandom.py
